--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
 <body>
   
   <h1 style="text-align:centre;">My Webpage</h1>
-  <p style="font-family: monospace;">My name is ruxi</p>
+  <p>My name is ruxi</p>
   
 	<nav>
 			<ul>
-        <li><a href="#">Facts about me!</a>             </li>
+        <li><a href="#">Facts about me!</a></li>
         <li><a href="#">Education</a></li>
+        <li><a href="#">Favourite Books</a><li>
 			</ul>
 	</nav>
   
-  <h2 style="color:#575e9e;"> Facts about me!     </h2>
+  <h2 style="color:#575e9e;"> Facts about me!</h2>
   
   <ol>
     <li>I love cats</li>
@@ -33,8 +34,16 @@
     </li>
   </ol>  
   
+    <h2 style="color:#575e9e;"> Favourite books</h2>
   
-  <p>Please fill in the form below</p>
+  <ol>
+    <li>Harry Potter</li>
+    <li>Hunger Games</li>
+  </ol>
+  
+  
+  <h2 style="color:#575e9e;">Please fill in the form below</h2>
+    
   <form>
     <label for="text">Name:</label>
     <input type="text" id="text" name="text">
